apply plugin: 'java'
apply plugin: 'maven'

// Inform IntelliJ projects about the generated code.
apply plugin: 'idea'

group = 'com.esri.geometry'
version = '2.0.0'

description = """Echo Park Labs' version of the ESRI Geometry API for Java"""

sourceCompatibility = 1.9
targetCompatibility = 1.9
// https://stackoverflow.com/questions/18689365/how-to-add-xlintunchecked-to-my-android-gradle-based-project
// https://stackoverflow.com/a/34452265/445372
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll([
            "-Xlint:unchecked",
            "-Xlint:deprecation",
            "--add-exports",
            "java.base/jdk.internal.misc=ALL-UNNAMED"
    ])
}

repositories {
     maven { url "http://repo.maven.apache.org/maven2" }
}

dependencies {
    compile group: 'io.sgr', name: 's2-geometry-library-java', version: '1.0.1'
    compile group: 'org.json', name: 'json', version:'20170516'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version:'2.6.2'
    compile files('/usr/local/lib/proj.jar')
    testCompile group: 'junit', name: 'junit', version:'4.12'
    testCompile group: 'org.openjdk.jol', name: 'jol-core', version: '0.1'
}

test {
    testLogging {
        exceptionFormat = 'full'
    }

    // https://www.youtube.com/watch?v=4HG0YQVy8UM&feature=youtu.be
    jvmArgs += ['--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED']
}

task copyToLib(type: Copy) {
    into "$buildDir/libs"
    from configurations.runtime
}

build.dependsOn(copyToLib)

tasks.withType(Test) {
    systemProperty "java.library.path", "/usr/local/lib/"
}